# libprefix_tree

./: .gitignore  CMakeLists.txt  README.txt  TODO.txt
doc/en/: LICENSE.en.txt  README.en.txt
doc/ru/: LICENSE.ru.txt  README.ru.txt
include/prefix_tree/: prefix_tree.h  prefix_tree_map.h
src/: prefix_tree.cpp
test/: CMakeLists.txt
test/src/: test_main.cpp  test_prefix_tree.cpp  test_prefix_tree.h  test_prefix_tree_map.cpp  test_prefix_tree_map.h
